# devrank

./: .gitignore  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
impact/: celery_app.py  exceptions.py
impact/adapters/: base.py  github.py  registry.py
impact/domain/: models.py
impact/ingestion/: base.py  dump.py  github_live.py
impact/ledger/: ledger.py
impact/metrics/: __init__.py  base.py  utils.py
impact/metrics/plugins/: cycle_time.py  pr_merge_effectiveness.py  pr_throughput.py  review_leverage.py  review_quality.py
impact/persistence/: database.py  filesystem.py
impact/providers/: github_live.py
impact/providers/github/: client.py  fetcher.py
impact/samples/github_live_dump/: dump_manifest.json
impact/samples/github_live_dump/canonical/: commits.jsonl  dump_manifest.json  files.jsonl  issue_comments.jsonl  pull_requests.jsonl  review_comments.jsonl  reviews.jsonl
impact/samples/github_test/dump_2024-12/canonical/: commits.jsonl  pull_requests.jsonl  reviews.jsonl
impact/scripts/: fetch_github.py  generate_report.py
impact/tasks/: fetch.py
impact/tests/: conftest.py  test_cycle_time.py  test_dump_ingestion.py  test_github_adapter.py  test_ledger.py  test_pr_merge_effectiveness.py  test_pr_throughput.py  test_review_leverage.py  test_review_quality.py
samples/github_test/dump_2024-12/: dump_manifest.json
samples/github_test/dump_2024-12/canonical/: files.jsonl  issue_comments.jsonl  review_comments.jsonl  timeline.jsonl
