[project]
name = "devrank"
version = "0.1.0"
description = "DevRank: SaaS for vetting candidates through scenario-based interviews and impact assessment"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.3",
    "celery[redis]>=5.3.6",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]
